Varias pantallas hechas!! Faltaria la del contenido!

--- a/public/assets-ref/scss/virtuagora-ref-side.scss
+++ b/public/assets-ref/scss/virtuagora-ref-side.scss
@@ -143,3 +143,12 @@ body {
         textarea{padding:0;border:0;box-shadow:none;}
     }
 }
+
+.twitter-typeahead{
+    width: 100%;
+    vertical-align: middle;
+}
+
+.ui-datepicker .ui-datepicker-title select{
+  color: #000;
+}
