--- a/views/ref/admin/ajustes.twig
+++ b/views/ref/admin/ajustes.twig
@@ -1,14 +1,13 @@
-{% extends "lpe/master.twig" %}
+{% extends "ref/side-master.twig" %}
  {% block linkhead %}
-<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %}
+<link rel="stylesheet" href="{{ baseUrl() }}/assets-ref/css/sceditor/sceditor-main.css"> {% endblock %}
 {# ----------------------------------------------------------- #} {% block titulo %}Ajustes de plataforma{% endblock %} {% block body %}
-<div class="container" style=" ">
+<div class="container-fluid" style=" ">
     <div class="row">
-        {% set paginaAdmin = 5 %} {% include '/lpe/admin/listaSecciones.twig' %}
-        <div class="col-xs-12 col-sm-9">
+        <div class="col-xs-12 col-md-10 col-lg-8">
             <div class="text-center">
-                <h2 class="text-center"><strong>Ajustes</strong></h2>
-                <br>
+                <h2>Ajustes</h2>
+                <hr>
             </div>
              <form action="{{ urlFor('runAdmAjuste') }}" method="POST">
                  
@@ -57,8 +56,8 @@
 </div>
 
 {% endblock body %} {# -------------------------------------------- #} {% block scripts %}
-<script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>
-<script src="{{ baseUrl() }}/assets-lpe/js/sceditor/jquery.sceditor.js"></script>
+<script src="{{ baseUrl() }}/assets-ref/js/autosize.min.js"></script>
+<script src="{{ baseUrl() }}/assets-ref/js/sceditor/jquery.sceditor.js"></script>
 <script>
 	$(function() {
 		$("textarea").sceditor({
