--- a/views/ref/admin/modificarInicio.twig
+++ b/views/ref/admin/modificarInicio.twig
@@ -1,4 +1,4 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
+{% extends "ref/side-master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
 <form id="modificarInicio" class="form-horizontal">
     <div class="container" style="margin-bottom:40px">
         <div class="row">
