--- a/views/ref/admin/subirImagenes.twig
+++ b/views/ref/admin/subirImagenes.twig
@@ -1,13 +1,10 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Imagenes{% endblock %} {% block body %}
-<div class="container" style=" ">
+{% extends "ref/side-master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Imagenes{%
+endblock %} {% block body %}
+<div class="container-fluid" style=" ">
     <div class="row">
-        {% set paginaAdmin = 4 %} {% include '/lpe/admin/listaSecciones.twig' %}
-        <div class="col-xs-12 col-sm-9">
-            <div class="text-center">
-                <h2 class="text-center"><strong>Imagenes</strong>
-        </h2>
-                <br>
-            </div>
+        <div class="col-xs-12 col-md-10 col-lg-8">
+                <h2>Subir Imagenes</h2>
+                <hr>
             <div class="list-group">
                 <li class="list-group-item">
                     <form action="{{ urlFor('runCrearImagen') }}" method="POST" enctype="multipart/form-data">
@@ -24,7 +21,7 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label"><strong>Asociar</strong> <em>Si la imagen es el banner del home o de algun bloque, seleccionelo. Sino, deje "Sin Asociar"</em></label>
-        <select name="asociar" class="form-control">
+                            <select name="asociar" class="form-control">
           <option value="no">Sin asociar</option>
           <option value="banner">Banner de página de Inicio</option>
           <option value="1">Derecho 1 - Bloque</option>
@@ -38,7 +35,7 @@
           <option value="9">Derecho 9 - Bloque</option>
           <option value="10">Derecho 10 - Bloque</option>
         </select>
-      </div>
+                        </div>  
                         <div class="form-group text-right">
                             <button type="submit" class="btn btn-success">Subir imagen</button>
                         </div>
@@ -48,7 +45,7 @@
                 <li class="list-group-item">
                     <div class="clearfix">
                         <div class="pull-right text-center">
-                                <a href="javascript:void(0)" class="btn btn-success" onclick="copyToClipboard('{{ baseUrl() }}/img/uploads/{{imagen}}')"><i class="zmdi zmdi-copy"></i></a>
+                            <a href="javascript:void(0)" class="btn btn-success" onclick="copyToClipboard('{{ baseUrl() }}/img/uploads/{{imagen}}')"><i class="zmdi zmdi-copy"></i></a>
                         </div>
                         <div class="pull-left">
                             <img src="{{ baseUrl() }}/img/uploads/{{imagen}}" class="img-thumbnail" style="height:100px">
@@ -66,7 +63,6 @@
         </div>
     </div>
 </div>
-
 {% endblock body %} {# -------------------------------------------- #} {% block scripts %}
 <script>
     $(document).ready(function() {
