--- a/views/ref/menu-side-user.twig
+++ b/views/ref/menu-side-user.twig
@@ -18,26 +18,10 @@
 		</li>
 		<hr>
 		<li>
-			<a href="{{urlFor('shwCrearDerecho')}}">Nuevo <b>Eje</b></a>
+			<a href="{{ urlFor('shwModifUsuario') }}">Editar perfil</a>
 		</li>
 		<li>
-			<a href="{{urlFor('shwModificarEjes')}}">Modificar <b>Ejes</b></a>
-		</li>
-		<hr>
-		<li>
-			<a href="{{ urlFor('shwCrearModerad') }}">Moderadores</a>
-		</li>
-		{#<li>
-			<a href="{{ urlFor('shwCrearImagen') }}">Imagenes</a>
-		</li>
-		<li>
-			<a href="{{ urlFor('shwAdmAjuste') }}">Ajustes</a>
-		</li>#}
-		<li>
-			<a href="{{ urlFor('shwEstadi') }}">Estadisticas</a>
-		</li>
-		<li>
-			<a href="{{ urlFor('shwExportar') }}">Exportar</a>
+			<a href="{{ urlFor('shwModifClvUsuario') }}">Cambiar clave</a>
 		</li>
 		<hr>
 		<li>
