--- a/views/ref/admin/modificarEjes.twig
+++ b/views/ref/admin/modificarEjes.twig
@@ -3,23 +3,20 @@ endblock %} {% block body %}
 <div class="container-fluid" style=" ">
   <div class="row">
     <div class="col-xs-12 col-md-11 col-lg-8">
-      <h2>Exportar</h2>
+      <h2>Modificar Ejes</h2>
+      <p class="text-muted">Seleccione el eje a modificar</p>
       <hr>
       <table class="table table-striped table-hover ">
         <thead>
           <tr>
-            <th colspan="2">Elemento</th>
+            <th colspan="2">Ejes</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Listado de emails de usuarios</td>
-            <td class="text-center"><a href="{{ urlFor('shwEmails') }}" class="btn btn-link btn-xs">Descargar<i class="fa fa-download fa-fw"></i></a></td>
-          </tr>
           {% for i in 1..8 %}
           <tr>
-            <td>Comentarios en el Eje {{ i }}</td>
-            <td class="text-center"><a href="{{ urlFor('shwComments', {'idDer': i}) }}" class="btn btn-link btn-xs">Descargar<i class="fa fa-download fa-fw"></i></a></td>
+            <td>Eje {{ i }}</td>
+            <td class="text-right"><a href="{{ urlFor('shwModifDerecho', {'idDer': i}) }}" class="btn btn-link btn-xs">Modificar<i class="fa fa-pencil fa-fw"></i></a></td>
           </tr>
           {% endfor %}
         </tbody>
