--- a/views/ref/admin/participantes.twig
+++ b/views/ref/admin/participantes.twig
@@ -2,7 +2,7 @@
 <div class="container" style=" ">
     <div class="row">
         {% set paginaAdmin = 2 %} {% include '/lpe/admin/listaSecciones.twig' %}
-        <div class="col-xs-12 col-sm-9">
+        <div class="col-xs-12 col-md-10 col-lg-8">
             <div class="text-center">
                 <h2 class="text-center"><strong>Participantes</strong>
         </h2>
