--- a/views/ref/portal/inicio.twig
+++ b/views/ref/portal/inicio.twig
@@ -14,8 +14,17 @@
 				<h1 class="gris black grande">Plataforma digital de participación</h1>
 				<p>Todas las voces y todas las miradas serán escuchadas en este proceso -inédito en la provincia y en el país-, de modo
 					que la futura convención reformadora tenga la mayor legitimidad social posible.</p>
+				{% if user is not empty %}
+				<h3 class="bold"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="margin-right:10px;">{{ user.nombre
+					}} {{ user.apellido }}</h3>
+				{% endif %}
 				<p>Te invitamos a dejar tus opiniones en los 8 ejes principales a contemplarse en el proceso de reforma:</p>
-        <a href="{{urlFor('shwLogin')}}" class="btn btn-default btn-lg btn-block"><i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
+				{% if user is empty %}
+				<div class="btn-group btn-group-justified btn-group-lg">
+					<a href="{{urlFor('shwLogin')}}" class="btn btn-red"><i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
+					<a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-default"><i class="fa fa-plus fa-fw"></i>Registrarse</a>
+				</div>
+				{% endif %}
 			</div>
 			<div class="col-xs-12 col-sm-5"></div>
 		</div>
@@ -26,25 +35,22 @@
 	<div class="ejeIntro eje{{i}}">
 		<div class="container">
 			<div class="row">
-        <div class="parent">
-
-				<div class="col-xs-12 col-md-5 child">
-					<h1 class="grande black blanco" style="margin:0;"><span style="color:#c40202">0{{i}}</span><br>Democracia y participación</h1>
+				<div class="parent">
+					<div class="col-xs-12 col-md-5 child">
+						<h1 class="grande black blanco" style="margin:0;"><span style="color:#c40202">0{{i}}</span><br>Democracia y participación</h1>
+					</div>
+					<div class="col-xs-12 col-md-5 child">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quas autem cumque, quasi reiciendis veniam ut tenetur
+							doloribus. Quis unde commodi nulla molestiae tenetur, quia deleniti fugiat non cupiditate ullam.</p>
+					</div>
+					<div class="col-xs-12 col-md-2 child"><a href="#" class="btn btn-large btn-participar">PARTICIPAR</a></div>
 				</div>
-				<div class="col-xs-12 col-md-5 child">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quas autem cumque, quasi reiciendis veniam ut tenetur
-						doloribus. Quis unde commodi nulla molestiae tenetur, quia deleniti fugiat non cupiditate ullam.</p>
-				</div>
-				<div class="col-xs-12 col-md-2 child"><a href="#" class="btn btn-large btn-participar">PARTICIPAR</a></div>
-        </div>
 			</div>
 		</div>
 	</div>
 	{% endfor %}
 </div>
-
 {% endblock body %} {# -------------------------------------------- #} {% block scripts %}
-
 <script>
     $(function() {
   $('a[href="#derechos"]').click(function() {
