--- a/views/ref/registro/registro-exito.twig
+++ b/views/ref/registro/registro-exito.twig
@@ -7,7 +7,7 @@
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2 class="black gris">VEerifique su correo electrónico</h2>
+			<h2 class="black gris">Verifique su correo electrónico</h2>
 			<p>Antes de comenzar, es necesario que <b>verifique su direccion de correo electrónico</b>. Para ello, le hemos enviado a su dirección de email <b>{{ email }}</b> un correo para realizar la verificación de su cuenta.</p>
 			<p>Le pedimos que ingrese a su email y realice la verificación. Una vez hecho, ya podrá comenzar a utilizar el portal.</p>
 						<a href="{{ urlFor('shwPortal') }}" class="btn btn-default"><i class="fa fa-sign-in fa-fw"></i> Volver al inicio</a>
